Fix table autosizing and dark mode colors on admin pagse (#2202)

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -673,3 +673,10 @@ video {
 .w-8 {
   width: 2rem;
 }
+
+/* Autosize table on process pages */
+
+.table--autosize {
+  width: auto;
+  min-width: 0;
+}
